--- a/sass/_mixin.scss
+++ b/sass/_mixin.scss
@@ -1,3 +1,9 @@
+@mixin media($width){
+    @media all and (min-width: $desktop-width){
+        
+    }
+}
+
 @mixin primfont{
     font-family: 'open-sans';
 }
