mobile, tablet and desktop view points constructed

--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -39,7 +39,7 @@
          url('../../fonts/opensans-light-webfont.woff2') format('woff2'),
          url('../../fonts/opensans-light-webfont.ttf') format('truetype'),
          url('../../fonts/opensans-light-webfont.svg#open_sanslight') format('svg');
-    font-weight: lighter;
+    font-weight: normal;
     font-style: normal;
 
 }
