--- a/sass/_body.scss
+++ b/sass/_body.scss
@@ -2,37 +2,65 @@ body{
     background-color: black;
     color: #ffffff;
     font-size: 16px;
+    width: 100%;
+    margin-bottom: 50px;
 }
 
 h1{
     display: none
 }
 
-.container1{
+.container{
     width: 100%;
+    height: 90vh;
     display: flex;
-    align-items: center;
-    
+    @include center;
+    @include tablet {
+        width: 100%;
+        flex-direction: row;
+        justify-content: flex-start;
+        padding-left: 17%;   
+    }
+    @include desktop {
+        padding-left: 32px;
+    }
+
+    img{
+        max-width:220px;
+        width: 100%;
+        @include tablet{
+            width: 22%;
+        }
+        @include desktop{
+            position: aboslute;
+            margin-right: 5%;
+        }
+    }  
 }
-
-.image{
-    width: 220px;
-    margin: 200px 0;
-    padding: 0 20px;
-}
-
-@include primefont {
-    
-};
-
 
 .selectcontain{
-    margin: auto 50px;
-}
+    @include center;
 
-#selector{
+    @include tablet{
+         margin-left: 12px;
+    }
+    
+    h2{
+        font-family: 'open_sans';
+        font-size: 0.8rem;
+        margin: 18px;
+        
+        @include tablet{
+                font-size: 0.9rem;
+                text-align: left;
+                margin: 0 0 15px 0;
+            }
+        }
+    }
+    #selector{
     width: 120px;
     height: 25px;
     font-size: 1rem;
     text-transform: capitalize;
-}
+    }
+    
