--- a/sass/_body.scss
+++ b/sass/_body.scss
@@ -35,7 +35,39 @@ h1{
             position: aboslute;
             margin-right: 5%;
         }
-    }  
+    }
+    .loading{
+        img{
+            width: 40px;
+        }
+    }
+}
+
+.compactHeader{
+    @include center;
+    padding-top: 30px;
+    height: auto;
+
+    @include tablet{
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: flex-start;
+        padding-left: 20px;
+    }
+
+    img{
+        width: 150px;
+
+        @include tablet{
+            width: 70px;
+            padding: 0 75px;
+
+        }
+        @include desktop{
+            padding: 0 75px 0 0;
+        }
+    }
 }
 
 .selectcontain{
@@ -46,7 +78,7 @@ h1{
     }
     
     h2{
-        font-family: 'open_sans';
+        font-family: $basefont;
         font-size: 0.8rem;
         margin: 18px;
         
@@ -54,13 +86,39 @@ h1{
                 font-size: 0.9rem;
                 text-align: left;
                 margin: 0 0 15px 0;
-            }
         }
     }
-    #selector{
+}
+#selector{
     width: 120px;
     height: 25px;
     font-size: 1rem;
     text-transform: capitalize;
+}
+
+.err{
+        position: relative;
+        top: 20px;
+        font-family: $basefont;
+        text-transform: capitalize;
     }
     
+.newsContainer{
+    .newgrid{
+    
+    }
+    ul{
+
+    }
+    li{
+        width: 100%;
+    }
+
+    .storyImage{
+        width: 100%;
+        height: 420px;
+        background-size: cover;
+    }
+    }
+
+}
