--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,12 +1,9 @@
 .footer{
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
     height: 75px;
     width: 100%;
     text-align: center;
-
+    @include center;
+    position: absolute;
 
     p{
         color: #c2c2c2;
