--- a/sass/_variable.scss
+++ b/sass/_variable.scss
@@ -1,7 +1,9 @@
 
-$desktop-width: 1000px;
+$desktop-vh: 1000px;
 
-$tablet-width: 600px;
+$tablet-vh: 600px;
+
+$mobile-vh: 480px;
 
 $bgcolor: black;
 
