--- a/sass/_mixin.scss
+++ b/sass/_mixin.scss
@@ -27,3 +27,12 @@
   justify-content: center;
   align-items: center;
 }
+
+@mixin animate{
+  animation-name: reposition1;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
+  animation-direction: alternate;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-in-out;
+}
