--- a/sass/_mixin.scss
+++ b/sass/_mixin.scss
@@ -28,8 +28,17 @@
   align-items: center;
 }
 
-@mixin animate{
+@mixin animate1{
   animation-name: reposition1;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
+  animation-direction: alternate;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-in-out;
+}
+
+@mixin animate{
+  animation-name: reposition;
   animation-duration: 1s;
   animation-iteration-count: 1;
   animation-direction: alternate;
