--- a/sass/_body.scss
+++ b/sass/_body.scss
@@ -58,6 +58,10 @@ h1{
 		background-size: cover;
 		background-position: center;
 
+	.storyImage:hover{
+		
+	}
+
 		.abstractText{
 			width: 95%;
 			padding: 12px;
