--- a/sass/_mixin.scss
+++ b/sass/_mixin.scss
@@ -32,7 +32,7 @@
   animation-name: reposition1;
   animation-duration: 1s;
   animation-iteration-count: 1;
-  animation-direction: alternate;
+  animation-direction: normal;
   animation-fill-mode: forwards;
   animation-timing-function: ease-in-out;
 }
@@ -41,7 +41,16 @@
   animation-name: reposition;
   animation-duration: 1s;
   animation-iteration-count: 1;
-  animation-direction: alternate;
+  animation-direction: normal;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-in-out;
+}
+
+@mixin abstractshow{
+  animation-name: abstractshow;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
+  animation-direction: normal;
   animation-fill-mode: forwards;
   animation-timing-function: ease-in-out;
 }
