--- a/sass/_mixin.scss
+++ b/sass/_mixin.scss
@@ -29,28 +29,25 @@
 }
 
 @mixin animate1{
-  animation-name: reposition1;
-  animation-duration: 1s;
-  animation-iteration-count: 1;
-  animation-direction: normal;
-  animation-fill-mode: forwards;
-  animation-timing-function: ease-in-out;
+  animation: reposition1 1s 1 ease-in-out;
+  @keyframes reposition1 {
+			0% {transform: translate(-10px, 10px); opacity: 0}
+			100% {transform: translate(0px, 0px); opacity: 1}
+		}
 }
 
-@mixin animate{
-  animation-name: reposition;
-  animation-duration: 1s;
-  animation-iteration-count: 1;
-  animation-direction: normal;
-  animation-fill-mode: forwards;
-  animation-timing-function: ease-in-out;
+@mixin animate2 {
+  animation: reposition 1s 1 ease-in-out;
+  @keyframes reposition {
+		0% {transform: translate(10px, -10px); opacity: 0}
+		100% {transform: translate(0px, 0px); opacity: 1}
+	}
 }
 
-@mixin abstractshow{
-  animation-name: abstractshow;
-  animation-duration: 1s;
-  animation-iteration-count: 1;
-  animation-direction: normal;
-  animation-fill-mode: forwards;
-  animation-timing-function: ease-in-out;
+@mixin fadein {
+  animation: fadein 1s 1 ease-in-out;
+  @keyframes fadein {
+    0% {opacity: 0}
+    100% {opacity: 1}
+  }
 }
