--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,21 +1,20 @@
-.footer{
-    height: 75px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    @include desktop{
-        justify-content: flex-start;
+.footer {
+    position: absolute;
+    margin: 30px 0;
+    width: 100%;
+    @include desktop {
+        padding-left: 30px;
     }
 
     p{
         color: #c2c2c2;
-        font-family:'open_sans';
+        font-family: $basefont;
         font-size: 0.9rem;
-        @include tablet{
-            margin: 5px;
-        }
-        @include desktop{
-            padding-left: 30px;
+        text-align: center;
+        text-align: left;
+
+        @include tablet {
+            text-align: center;
         }
     }
 }
