--- a/sass/_body.scss
+++ b/sass/_body.scss
@@ -1,9 +1,10 @@
 body{
-	background-color: black;
+	background-color: #333030;
 	color: #ffffff;
 	font-size: 16px;
 	position: relative;
 	font-family: $basefont;
+	height: 90vh;
 }
 
 h1{
@@ -36,10 +37,13 @@ h1{
 		display: flex;
 		flex-wrap: wrap;
 
+		@include mobile {
+			flex-direction: column;
+		}
 	}
 
 	li{
-		width: 100%;
+		@include fadein;
 		@include tablet{
 			width: 50%;
 		}
@@ -47,25 +51,35 @@ h1{
 			width: 25%;
 		}
 	}
+
 	p{
 		color: white;
 		text-decoration: none;
 	}
+
 	.storyImage{
-		width: 100%;
 		height: 420px;
 		position: relative;
+		overflow: hidden;
 		background-size: cover;
 		background-position: center;
-
 		.abstractText{
-			width: 95%;
 			padding: 12px;
-			bottom: 0;
-			// top: 420px;
 			position: absolute;
+			bottom: -200px;
 			line-height: 1.5rem;
 			background-color: rgba(0, 0, 0, 0.5);
 		}
 	}
+
+	.storyImage:hover {
+		.abstractText {
+			bottom: 0;
+			@include popup;
+		}
+	}
+
+	p:hover {
+		color: cadetblue;
+	}	
 }
