fixed console errors

--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -5,7 +5,7 @@
     @include desktop {
         padding-left: 30px;
     }
-
+// Text inside the footer
     p{
         color: #c2c2c2;
         font-family: $basefont;
